Fix navigation shadow overlap
- navigation shadow overlap fixed

--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -6,6 +6,7 @@
   justify-content: space-between;
   min-height: 10rem;
   padding: 0 1rem;
+  pointer-events: none;
   position: fixed;
   top: 0;
   width: 100%;
@@ -21,6 +22,7 @@
     @include font(25px, 25px);
     color: var(--color-nav-hamburger);
     height: 20px;
+    pointer-events: all;
     position: relative;
     right: 1rem;
     top: 2rem;
@@ -38,6 +40,7 @@
     height: 100vh;
     left: 0;
     padding: 4rem 0 2rem;
+    pointer-events: all;
     position: fixed;
     right: 0;
     top: 0;
